get_filename_component(MODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME_WE)
set(TARGET_NAME ${PROJECT_NAME}_${MODULE_NAME})

file(GLOB PROTO_FILES "*.proto")

set(PROTO_HDRS)
set(PROTO_SRCS)
foreach(PROTO_FILE ${PROTO_FILES})
  get_filename_component(FILE_NAME ${PROTO_FILE} NAME_WE)
  list(APPEND PROTO_HDRS "${CMAKE_CURRENT_BINARY_DIR}/${FILE_NAME}.pb.h")
  list(APPEND PROTO_SRCS "${CMAKE_CURRENT_BINARY_DIR}/${FILE_NAME}.pb.cc")
  execute_process(COMMAND ${PROTOBUF_PROTOC_EXECUTABLE}
                          ${PROTO_FLAGS}
                          ${PROTO_FILE})
ENDFOREACH()

add_library(${TARGET_NAME} ${PROTO_SRCS})

install(FILES ${PROTO_HDRS} DESTINATION include/${PROJECT_NAME}/${MODULE_NAME})
install(FILES ${PROTO_FILES} DESTINATION share/${PROJECT_NAME}/${MODULE_NAME})
install(TARGETS ${TARGET_NAME}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
